# check-email

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/middleware/: logger.rs
src/models/: validate.rs
src/routers/: mod.rs  validate.rs
